1998-12-20  David Faure  <faure@kde.org>

	* kfmman.cpp : Reload doesn't bring to beginning of the page anymore
	* Lots of bugfixes :
	 - Fixes in the tree view (Michael Reiher)
	 - Using KStdAccel in kfm (allows to change key bindings)
	 - Desktop icon placement in Mac mode fixed
	 - Fixed setting of SUID and SGID and group at the same time
	 - Fix Ctrl+A in the URL qlineedit
	 - Decode URL before showing them (in the title or in the URL qlineedit)
	 - Fixes concerning mini-icons for directories (thanks to Michael Reiher)
	 - Removed useless dialog boxes when kfm is started for the first time
	    except "creating ~/Desktop".
	 - Allow show/hide '.*' files from Desktop. (Michael Reiher)
	* Waldo Bastian : 
	Handle redirect during COPY (used for images/view document source)

1998-12-15  David Faure  <faure@kde.org>

	* main.cpp : Test for KDE release, and copy new Templates it
	necessary. Patch from Michael Reiher <michael.reiher@gmx.de>
	* popup.cpp : Use "Name" field from Template files, not "Comment".

1998-12-14  David Faure  <faure@kde.org>

	* Sven Radej added fusion of global & local mimetypes (same for applications) :
	"Whenever you open global or local mimelnk dir, first local and then global
	mimelink dir is scanned and all items are shown like they are in your local
	dir; duplicated entries from global dir are discarded. You can try to delete
	or move to trash any of them; if they are your local copy they will be
	deleted, (although you will continue to see global one). If they are not your
	local copy normal error is issued (Cannot move, bla, bly permission denied).
	This works for mime *and* applnk directories."

1998-12-13  Waldo Bastian  <bastian@kde.org>

        * Created popup window asking the user what to do with incoming
        HTTP-cookies.

        * Fixed timezone bug in kcookiejar.cpp (BSD only). 

1998-12-12  David Faure  <faure@kde.org>

	* popup.cpp, popup.h : Created for the KNewMenu class. Moved code