@@ -1,3 +1,8 @@
+1998-12-21  David Faure  <faure@kde.org>
+
+	* passworddialog.cpp : Added layout management
+	* More patches from Michael Reiher concerning the tree view
+
 1998-12-20  David Faure  <faure@kde.org>
 
 	* kfmman.cpp : Reload doesn't bring to beginning of the page anymore
